<resources>
    <string name="app_name">Lab_5</string>
    <string name="main_title">Учёт канцелярских товаров</string>
    <string name="settings">Настройки</string>
    <string name="selected_count_default">Выбрано: 0</string>
    <string name="selected_count">Выбрано: %1$d</string>
    <string name="select">Выбрать</string>
    <string name="reset">Сбросить</string>
    <string name="share">Поделиться</string>
    <string name="delete">Удалить</string>
    <string name="exit">Выйти</string>
    <string name="add_product">Добавить товар</string>
    <string name="hint_article">Артикул</string>
    <string name="hint_name">Наименование</string>
    <string name="hint_manufacturer">Производитель</string>
    <string name="hint_country">Страна производства</string>
    <string name="hint_category">Категория товара</string>
    <string name="hint_price">Цена</string>
    <string name="hint_quantity">Остаток</string>
    <string name="settings_title">Настройки внешнего вида</string>
    <string name="font_size_default">Размер шрифта: 16</string>
    <string name="item_height_auto">Высота элемента: авто</string>
    <string name="show_manufacturer">Показывать производителя</string>
    <string name="show_country">Показывать страну производства</string>
    <string name="show_quantity">Показывать остаток</string>
    <string name="large_price">Показывать цену крупным шрифтом</string>
    <string name="save">Сохранить</string>
    <string name="back">Назад</string>
    <string name="product_default_name">Название товара</string>
    <string name="product_default_article">Артикул: A001</string>
    <string name="product_default_manufacturer">Производитель: Erich Krause</string>
    <string name="product_default_country">Страна: Россия</string>
    <string name="product_default_category">Категория: Письменные принадлежности</string>
    <string name="product_default_price">Цена: 45.5 руб.</string>
    <string name="product_default_quantity">Остаток: 120</string>
    <string name="edit">Изменить</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="edit_product">Изменить товар</string>
    <string name="record_updated">Запись изменена</string>
    <string name="record_added">Запись добавлена</string>
    <string name="record_deleted">Запись удалена</string>
    <string name="fill_all_fields">Заполните все поля</string>
    <string name="price_and_quantity_must_be_numbers">Цена и остаток должны быть числами</string>
    <string name="price_cannot_be_negative">Цена не может быть отрицательной</string>
    <string name="quantity_cannot_be_negative">Остаток не может быть отрицательным</string>
    <string name="delete_record_title">Удаление записи</string>
    <string name="delete_product_message">Удалить товар "%1$s"?</string>
    <string name="delete_selected_title">Удаление выбранных записей</string>
    <string name="delete_selected_message">Удалить выбранные товары? Количество: %1$d</string>
    <string name="no_selected_records">Нет выбранных записей</string>
    <string name="selected_records_deleted">Выбранные записи удалены</string>
    <string name="select_at_least_one_product">Выберите хотя бы один товар</string>
    <string name="selected_products_title">Выбранные канцелярские товары:</string>
    <string name="product_number">Товар №%1$d</string>
    <string name="product_share_separator">----------------------</string>
    <string name="share_chooser_title">Поделиться через</string>
    <string name="product_article_format">Артикул: %1$s</string>
    <string name="product_manufacturer_format">Производитель: %1$s</string>
    <string name="product_country_format">Страна: %1$s</string>
    <string name="product_category_format">Категория: %1$s</string>
    <string name="product_price_format">Цена: %1$.2f руб.</string>
    <string name="product_quantity_format">Остаток: %1$d</string>
    <string name="settings_saved">Настройки сохранены</string>
    <string name="font_size_format">Размер шрифта: %1$d</string>
    <string name="item_height_format">Высота элемента: %1$d dp</string>
</resources>